# CMakeIntegrationDemo

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md
BarCLI/: BarCLI.cpp  BarCLI.h  CMakeLists.txt
BarGUI/: BarGUI.cpp  CMakeLists.txt  mainwindow.cpp  mainwindow.h  mainwindow.ui
cmake/: additional_install_files.cmake  cpack_package.cmake  doxygen_docs.cmake  ftxui_fetchcontent.cmake  googletest_tests.cmake  graphviz_graph.cmake
res/: WELCOME
